--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-electron-app",
+  "name": "guitar-app",
   "version": "1.0.0",
   "description": "Prueba de proyecto con electronJS",
   "main": "main.js",
