--- a/.github/workflow/test.yml
+++ b/.github/workflow/test.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16' # Puedes ajustar la versión de Node.js según tu proyecto
+        node-version: '10'
 
     - name: Install dependencies
       run: npm install
